--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -3,17 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Electron App</title>
-  <!-- build:css stylesheets/vendor.css -->
-  <!-- bower:css -->
-  <!-- endbower -->
-  <!-- endbuild -->
   <link rel="stylesheet" href="stylesheets/application.css" />
-
-  <!-- build:js javascripts/vendor.js -->
-  <!-- bower:js -->
-  <!-- endbower -->
-  <!-- endbuild -->
-  <script src="javascripts/application.js" type="text/javascript"></script>
+  <script src="javascripts/browser/application.js" type="text/javascript"></script>
 </head>
 <body>
   <h1>Electron App</h1>
