--- a/lib/templates/stylesheets/application.sass
+++ b/lib/templates/stylesheets/application.sass
@@ -1,6 +1,8 @@
 html, body
 	padding: 0
 	margin: 0
+  height: 100%
+  overflow: hidden
 
 body
 	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif
