--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Electron App</title>
+  <title></title>
   <link rel="stylesheet" href="stylesheets/application.css" />
   <script src="javascripts/browser/application.js" type="text/javascript"></script>
 </head>
 <body>
-  <h1>Electron App</h1>
+  <div class="message">
+    <h1 id="title"></h1>
+    <div id="details"></div>
+    <small id="versions"></small>
+  </div>
 </body>
 </html>
