--- a/lib/templates/stylesheets/application.css
+++ b/lib/templates/stylesheets/application.css
@@ -9,15 +9,25 @@ body {
   font-family: -apple-system, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-h1 {
+.message {
   position: absolute;
   width: 500px;
   height: 250px;
   top: 50%;
   left: 50%;
-  font-size: 50px;
-  font-weight: 100;
+  color: #777;
+  font-weight: 200;
   text-align: center;
   margin-top: -125px;
   margin-left: -250px;
+}
+
+.message h1 {
+  font-size: 50px;
+  font-weight: 100;
+  color: #333;
+}
+
+.message div {
+  margin-bottom: 10px;
 }
