--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title></title>
   <script src="index.js" type="text/javascript"></script>
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 <body>
   <div class="message">
